[package]
name = "solana-http-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-sdk = "1.17.0"
solana-client = "1.17.0"
solana-program = "1.17.0"
spl-token = "4.0.0"
bs58 = "0.5.0"
base64 = "0.21.5"
ed25519-dalek = "1.0.1"
thiserror = "1.0"
env_logger = "0.10.1"
log = "0.4"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0"
spl-associated-token-account = "2.3.0"